--- a/lastBPM.Portal/Web.config
+++ b/lastBPM.Portal/Web.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0"?>
 <!--
-Web.config file for lastBPM.
+Web.config file for lastBPM.Portal.
 
 The settings that can be used in this file are documented at 
 http://www.mono-project.com/Config_system.web and 
